[build-system]
requires = [
  'setuptools',
  'Cython == 3.0.10',
  # https://numpy.org/devdocs/user/depending_on_numpy.html#build-time-dependency
  # from https://github.com/scipy/oldest-supported-numpy/pull/78#issuecomment-1747936818:
  "oldest-supported-numpy; platform_python_implementation != 'PyPy'",
  "numpy < 2.0.0; platform_python_implementation=='PyPy'",
  'hypothesis'
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Use --no-third-party to avoid linking in GLPK.
# The resulting binary would not be distributable.
before-all = """
  set -x
  apt-get install --yes wget || yum install -y wget || brew install bash coreutils
  wget https://raw.githubusercontent.com/coin-or/coinbrew/master/coinbrew
  sed -i.bak '/invoke_make/s/install/-j1 install/' coinbrew
  chmod +x coinbrew
  case "$(uname -m)" in
      arm64) config_args="--build=arm-apple-darwin";;
      aarch64) config_args="--build=aarch64-unknown-linux-gnu";;
  esac
  ./coinbrew fetch Cbc@2.10.11 --no-third-party && eval ./coinbrew build Cbc --no-third-party --parallel-jobs 16 --prefix=$(pwd)/local --verbosity 4 $config_args || (cat build/Data/Sample/1.2.12/config.log; echo ignoring errors)
"""
environment = { PATH="$(pwd)/local/bin:$PATH", LD_LIBRARY_PATH="$(pwd)/local/lib:$LD_LIBRARY_PATH", PKG_CONFIG_PATH="$(pwd)/local/lib/pkgconfig:$PKG_CONFIG_PATH", CIBW_ARCHS="$CIBW_ARCHS" }
skip = ["pp*-macosx*", "*-musllinux*", "pp31*-*", "pp*-*i686", "pp38-manylinux*", "pp39-manylinux*", "cp312-*i686", "cp313-*"]
