[project]
name = "cylp"
version = "0.93.1"
description="A Python interface for CLP, CBC, and CGL"
readme="README.rst"
authors=[
  {  name = 'Mehdi Towhidi', email = 'mehdi.towhidi@gerad.ca'  }, 
  {  name = 'Dominique Orban', email = 'dominique.orban@gerad.ca' },
  {  name =  'Ted Ralphs', email = 'ted@lehigh.edu'  }
]
dependencies = [
  "numpy >= 1.26.0",
  "scipy >= 0.10.0",
]
license='EPL-2.0'

[project.urls]
"Home Page"="https://github.com/coin-or/CyLP"
Documentation="https://coin-or.github.io/CyLP"

[build-system]
requires = [
  'setuptools',
  'Cython == 3.0.10',
  'numpy>=2.0.0rc1',
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Use --no-third-party to avoid linking in GLPK.
# The resulting binary would not be distributable.
before-all = """
  set -x
  apt-get install --yes wget || yum install -y wget || brew install bash coreutils
  wget https://raw.githubusercontent.com/coin-or/coinbrew/master/coinbrew
  sed -i.bak '/invoke_make/s/install/-j1 install/' coinbrew
  chmod +x coinbrew
  case "$(uname -m)" in
      arm64) config_args="--build=arm-apple-darwin";;
      aarch64) config_args="--build=aarch64-unknown-linux-gnu";;
  esac
  ./coinbrew fetch Cbc@2.10.12 --no-third-party && eval ./coinbrew build Cbc --no-third-party --parallel-jobs 16 --prefix=$(pwd)/local --verbosity 4 $config_args || (cat build/Data/Sample/1.2.12/config.log; echo ignoring errors)
"""
environment = { PATH="$(pwd)/local/bin:$PATH", LD_LIBRARY_PATH="$(pwd)/local/lib:$LD_LIBRARY_PATH", PKG_CONFIG_PATH="$(pwd)/local/lib/pkgconfig:$PKG_CONFIG_PATH", CIBW_ARCHS="$CIBW_ARCHS" }
skip = ["*-musllinux*", "cp38-*", "cp312-*i686"]
test-requires = ["cvxpy[testing]"]
